--- a/pushcorp_msgs/CMakeLists.txt
+++ b/pushcorp_msgs/CMakeLists.txt
@@ -15,23 +15,15 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
-
 find_package(rosidl_default_generators REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 
-set(msg_files
-  "msg/Value.msg"
-)
-
 rosidl_generate_interfaces(${PROJECT_NAME}
-  ${msg_files}
+  msg/Value.msg
+  srv/CommandValue.srv
+  srv/SetControlMode.srv
   DEPENDENCIES builtin_interfaces
-  
 )
 
 ament_export_dependencies(rosidl_default_runtime)
