--- a/pushcorp_msgs/package.xml
+++ b/pushcorp_msgs/package.xml
@@ -5,11 +5,12 @@
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="landongetting@gmail.com">rosindustrial</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   
   <depend>builtin_interfaces</depend>
+  <depend>rosidl_default_generators</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
